--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNre1UA6VXwbCnads0/OSb",
+      "authorship_tag": "ABX9TyMYBXqRKIn5CSn0R7pPVEal",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1302,9 +1302,276 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#intersection update- will give the intersection in the original set.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "a.intersection_update(c)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pkE5PC_qux0H",
+        "outputId": "08549173-3917-4bcb-bcef-e34b13a2f906"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2, 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#symmetric function- the common element or symmetric elements from the sets will remove and rests are the results.\n",
+        "#In simple terms, that symmetric difference will completely ignore the common values.\n",
+        "a = {1, 2, 3, 4, 5, 6}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(a.symmetric_difference(b))\n",
+        "\n",
+        "\n",
+        "print(a.symmetric_difference(c))"
+      ],
+      "metadata": {
+        "id": "g-apUkw983Mu",
+        "outputId": "687c3cb8-f1f4-4481-f55f-f5e6bf32b0eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 7, 8}\n",
+            "{1, 4, 5, 6}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#symmetric difference update- will gives changes in the original set.\n",
+        "#As we know that it will remove the common elements from one set to another sets.\n",
+        "a = {1, 2, 3, 4, 5, 6}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "a.symmetric_difference_update(b)\n",
+        "print(a)\n",
+        "\n",
+        "a.symmetric_difference_update(c)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "7bdBEpcj9fdI",
+        "outputId": "69ca915b-017f-4e0d-f0d2-21f197cf2d9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 7, 8}\n",
+            "{1, 4, 5, 7, 8}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                                  #Problem solving\n",
+        "#1. Write a program to find max and minimum in the set.\n",
+        "#2. Write a program to find common elements in three lists using sets.\n",
+        "#3. Write a program to find the difference in two sets.\n",
+        "#4. Write a python program to remove an item in a set if it is present in the set.\n",
+        "#5. Write a program to check if a set is the subset of another set."
+      ],
+      "metadata": {
+        "id": "nQNqOyVK-CYZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol1.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "\n",
+        "b= max(a)\n",
+        "c = min(a)\n",
+        "\n",
+        "print(\"The maximum value in set a is\", b)\n",
+        "\n",
+        "print(\"The minimum value in the given set is\",c)"
+      ],
+      "metadata": {
+        "id": "8YPo2wEhAT1j",
+        "outputId": "8c5bd4b3-4513-40e1-8983-bdd0fa645ff7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The maximum value in set a is 5\n",
+            "The minimum value in the given set is 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol2\n",
+        "a = [1, 2, 3, 4, 5]\n",
+        "b = [5, 6, 7, 8, 9]\n",
+        "c = [2, 3, 4, 5]\n",
+        "\n",
+        "a = set(a)\n",
+        "b = set(b)\n",
+        "c = set(c)\n",
+        "\n",
+        "print(a.intersection(b))\n",
+        "print(a)\n",
+        "\n",
+        "print(c.intersection(a))\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "v4qOflTwAlWS",
+        "outputId": "52e8d466-bba2-45b2-adc0-e24b07a3eda7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{5}\n",
+            "{1, 2, 3, 4, 5}\n",
+            "{2, 3, 4, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol3\n",
+        "a = {1, 2, 3, 4, 5, 6}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(a.difference(b))"
+      ],
+      "metadata": {
+        "id": "gRzabgPdBVw0",
+        "outputId": "297eaf28-d52f-4ded-86bd-7a5f001da9f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol4\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "\n",
+        "a.remove(5)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "GB189cR4CV8s",
+        "outputId": "04cf8d75-a8ff-4034-dedc-0fc2df4343a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol5\n",
+        "\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(c.issubset(a))"
+      ],
+      "metadata": {
+        "id": "FoIejP6JCmaj",
+        "outputId": "838668a5-2fc5-4149-de79-0b952c541c0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pkE5PC_qux0H"
+        "id": "Pbvlw54qCvut"
       },
       "execution_count": null,
       "outputs": []
