--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYBXqRKIn5CSn0R7pPVEal",
+      "authorship_tag": "ABX9TyNtWWvQX9jl8lvk92bHeq9T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1008,7 +1008,7 @@
       "metadata": {
         "id": "8Z6zlRXSgFp5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1028,7 +1028,7 @@
         "id": "wrguHrT_nd9k",
         "outputId": "4b437d56-d21d-40cc-b040-339a8e1d82c9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,7 +1057,7 @@
         "id": "lvGDub5koA96",
         "outputId": "ac8c0601-76b3-4264-c40e-62733fd82103"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,7 +1081,7 @@
         "id": "WEMuuxoVowrX",
         "outputId": "bfea1c1a-a835-4797-c74f-0bd1f2904507"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,7 +1112,7 @@
         "id": "XhB51JY_pR3f",
         "outputId": "5c7951db-c948-4ebf-daa9-bef6c31a8169"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,7 +1142,7 @@
         "id": "oO1__b7FqD_8",
         "outputId": "b230574c-9797-4f3f-b34b-1c0c1c89e564"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1176,7 @@
         "id": "PwJcGpsfrPLz",
         "outputId": "1c46d3b3-4aec-4537-8f29-82858ed3c54f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1211,7 +1211,7 @@
         "id": "r5QnrU98rb1d",
         "outputId": "4ce6fec3-61fa-4e2c-bd38-32bc34392977"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1236,7 +1236,7 @@
         "id": "TnC1DFDEsySu",
         "outputId": "43f55581-1833-4949-ca16-df1bf8fb66e7"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,7 +1261,7 @@
         "id": "MNTlKJXJtGvI",
         "outputId": "c00c5d55-d2b9-4d66-df62-269dbf5c8a33"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,7 +1289,7 @@
         "id": "ANOLXiZqtjrv",
         "outputId": "426041a1-5ac0-4aad-d52e-1cda7efd0a46"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1317,7 @@
         "id": "pkE5PC_qux0H",
         "outputId": "08549173-3917-4bcb-bcef-e34b13a2f906"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1349,7 +1349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1383,7 +1383,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1431,7 +1431,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,30 +1455,25 @@
         "b = set(b)\n",
         "c = set(c)\n",
         "\n",
-        "print(a.intersection(b))\n",
-        "print(a)\n",
-        "\n",
-        "print(c.intersection(a))\n",
+        "print(set(a) & set(b) & set(c))\n",
         "\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "v4qOflTwAlWS",
-        "outputId": "52e8d466-bba2-45b2-adc0-e24b07a3eda7",
+        "outputId": "26729dc4-9a0a-430f-d595-2d65415c686d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{5}\n",
-            "{1, 2, 3, 4, 5}\n",
-            "{2, 3, 4, 5}\n"
+            "{5}\n"
           ]
         }
       ]
@@ -1500,7 +1495,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1522,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1551,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
