--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtWWvQX9jl8lvk92bHeq9T",
+      "authorship_tag": "ABX9TyPTsdLERNLWShUK2ZXCk6yc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1467,7 +1467,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,9 +1564,204 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "                                                 #Functions\n",
+        "#Functions are a set of code, which once created then can be used throughout the program.\n",
+        "#e.g to create a function\n",
+        "\n",
+        "def hello():   #hello() is a variable here which we will use to call the function.\n",
+        "  print(\"Hello World\")           #Body which we wanted to perform in the function.\n",
+        "\n",
+        "hello()                      #Calling function"
+      ],
+      "metadata": {
+        "id": "Pbvlw54qCvut",
+        "outputId": "cf63f927-77d2-4167-c327-09a85a6970f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add():\n",
+        "  x = 23\n",
+        "  y = 34\n",
+        "  print(x+y)\n",
+        "\n",
+        "add()"
+      ],
+      "metadata": {
+        "id": "jwaC55uPvj93",
+        "outputId": "4fc23d6d-fc59-4149-c997-68046c8bf911",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "57\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                  #Parameters and arguments in a function.\n",
+        "#Parameters- Parameters are the variables that is written inside the parantheses with the name of function.\n",
+        "\n",
+        "#Arguments - Arguments are the values passed in the parameters while calling the function.\n",
+        "\n",
+        "def add():\n",
+        "  x = 23                       #Here x and y are the parameters and arguments will use while we will call the function. see in the next example\n",
+        "  y = 34\n",
+        "  print(x+y)\n",
+        "\n",
+        "add()\n",
+        "\n",
+        "\n",
+        "def add(x,y):                      #Here x and y are the parameters.\n",
+        "  print(x+y)                       #Function which we want to perform on parameters.\n",
+        "\n",
+        "add(44,7)                           #passing the arguments between or with the parameters with the help of function will perform.\n",
+        "\n",
+        "\n",
+        "add(34,34)\n",
+        "\n",
+        "add(34,84)                       #So on and so forth\n",
+        "\n",
+        "\n",
+        "\n",
+        "#Parameters are used when we wanted to define a function while arguments are used while calling the function."
+      ],
+      "metadata": {
+        "id": "nxQ9zooiwEbO",
+        "outputId": "df0d0600-30c8-4b30-cc35-4a15864b8461",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "57\n",
+            "51\n",
+            "68\n",
+            "118\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Creating a function which will calculate the area of rectangle.\n",
+        "\n",
+        "def rect(length, breath):\n",
+        "  print(\"The area of the rectangle is\", length*breath)\n",
+        "\n",
+        "rect(3, 4)\n",
+        "\n",
+        "\n",
+        "rect(4,5)"
+      ],
+      "metadata": {
+        "id": "ARTGR6Qvzr7P",
+        "outputId": "dc7e372b-6ec0-4ce2-98b5-2f2303988d2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The area of the rectangle is 12\n",
+            "The area of the rectangle is 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#What is arbitary arguments?\n",
+        "#Arbitary arguments are the arguments where we can provide multiple values in the form of tuple. And we can access with the index method.\n",
+        "#we are using a star(*) in the variable while defing the parameters. e.g\n",
+        "\n",
+        "def hello(*name):\n",
+        "  print(\"My name is\", name[2])\n",
+        "\n",
+        "hello(\"Jonny\", \"Lisa\", \"Peter\")"
+      ],
+      "metadata": {
+        "id": "8T96Nuoq0_zn",
+        "outputId": "a5739f63-c4ca-4e23-96ba-3b000d06188f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My name is Peter\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                        #Return Statement and Recursion in python."
+      ],
+      "metadata": {
+        "id": "glQj2IhH1mWW"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Return keyword in python is used to exit a function and return the value of the function.\n",
+        "\n",
+        "#In simple"
+      ],
+      "metadata": {
+        "id": "vztWCUyI31mJ"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Pbvlw54qCvut"
+        "id": "e8_JZNY_4VF9"
       },
       "execution_count": null,
       "outputs": []
