--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTsdLERNLWShUK2ZXCk6yc",
+      "authorship_tag": "ABX9TyN/oKolyXYCPY1WiMhKOWLV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1576,10 +1576,10 @@
       ],
       "metadata": {
         "id": "Pbvlw54qCvut",
-        "outputId": "cf63f927-77d2-4167-c327-09a85a6970f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf63f927-77d2-4167-c327-09a85a6970f4"
       },
       "execution_count": 60,
       "outputs": [
@@ -1603,11 +1603,11 @@
         "add()"
       ],
       "metadata": {
-        "id": "jwaC55uPvj93",
-        "outputId": "4fc23d6d-fc59-4149-c997-68046c8bf911",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jwaC55uPvj93",
+        "outputId": "4fc23d6d-fc59-4149-c997-68046c8bf911"
       },
       "execution_count": 59,
       "outputs": [
@@ -1651,11 +1651,11 @@
         "#Parameters are used when we wanted to define a function while arguments are used while calling the function."
       ],
       "metadata": {
-        "id": "nxQ9zooiwEbO",
-        "outputId": "df0d0600-30c8-4b30-cc35-4a15864b8461",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nxQ9zooiwEbO",
+        "outputId": "df0d0600-30c8-4b30-cc35-4a15864b8461"
       },
       "execution_count": 69,
       "outputs": [
@@ -1685,11 +1685,11 @@
         "rect(4,5)"
       ],
       "metadata": {
-        "id": "ARTGR6Qvzr7P",
-        "outputId": "dc7e372b-6ec0-4ce2-98b5-2f2303988d2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ARTGR6Qvzr7P",
+        "outputId": "dc7e372b-6ec0-4ce2-98b5-2f2303988d2a"
       },
       "execution_count": 70,
       "outputs": [
@@ -1716,11 +1716,11 @@
         "hello(\"Jonny\", \"Lisa\", \"Peter\")"
       ],
       "metadata": {
-        "id": "8T96Nuoq0_zn",
-        "outputId": "a5739f63-c4ca-4e23-96ba-3b000d06188f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8T96Nuoq0_zn",
+        "outputId": "a5739f63-c4ca-4e23-96ba-3b000d06188f"
       },
       "execution_count": 73,
       "outputs": [
@@ -1749,19 +1749,62 @@
       "source": [
         "#Return keyword in python is used to exit a function and return the value of the function.\n",
         "\n",
-        "#In simple"
+        "#In simple we are passing the parameters in return's parantheses. other thing is as same as the normal function. e.g\n",
+        "\n",
+        "def hello():\n",
+        "  return(\"Hello World, i am the best.\")\n",
+        "\n",
+        "print(hello())                      #Here, we have to use print statement while execution is with return function. more e.g in next"
       ],
       "metadata": {
-        "id": "vztWCUyI31mJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vztWCUyI31mJ",
+        "outputId": "68f55116-c8d6-431b-d021-1781055156ab"
       },
-      "execution_count": 75,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World, i am the best.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x,y):\n",
+        "  return(x+y)\n",
+        "\n",
+        "print(add(23,53))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e8_JZNY_4VF9",
+        "outputId": "529ccc4c-4bbd-40c5-e50d-f1bf4b6a3561"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "76\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "e8_JZNY_4VF9"
+        "id": "5mnXA0LD57Mh"
       },
       "execution_count": null,
       "outputs": []
