--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/oKolyXYCPY1WiMhKOWLV",
+      "authorship_tag": "ABX9TyMlcxaVy+nuR2v1qfN776Ma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1802,9 +1802,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "                                            #Recursion\n",
+        "#Recursion is a function can call itself for many times. Basically giving a benefit of looping."
+      ],
       "metadata": {
         "id": "5mnXA0LD57Mh"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BVImJM326v0e"
       },
       "execution_count": null,
       "outputs": []
