--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP01Vaop3uK6p8zzUZCEzld",
+      "authorship_tag": "ABX9TyNDllZooAKiOHgghtD5uYh5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1927,11 +1927,11 @@
         "print(a(4))"
       ],
       "metadata": {
-        "id": "hYKybO4ZEuX-",
-        "outputId": "72bc5959-f261-4330-d4f9-5903cefac549",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hYKybO4ZEuX-",
+        "outputId": "72bc5959-f261-4330-d4f9-5903cefac549"
       },
       "execution_count": 7,
       "outputs": [
@@ -1952,11 +1952,11 @@
         "print(x(1,2,3))"
       ],
       "metadata": {
-        "id": "vyKBg40pE6ae",
-        "outputId": "d992dc01-563f-434b-e2fc-70c790573451",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vyKBg40pE6ae",
+        "outputId": "d992dc01-563f-434b-e2fc-70c790573451"
       },
       "execution_count": 10,
       "outputs": [
@@ -1971,9 +1971,100 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Local variable.\n",
+        "#Local variables are restricted to only one block of code.\n",
+        "#It cannot changed throughout the program.\n",
+        "\n",
+        "\n",
+        "#Global Variable.\n",
+        "#Global variables are not restricted to one block of code and can be used throught the program."
+      ],
       "metadata": {
         "id": "pIomt6YvFQox"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#e.g of Local Variable.\n",
+        "x = 23\n",
+        "print(\"The first variable is\", x)\n",
+        "def hello():\n",
+        "  x = 33\n",
+        "  return x\n",
+        "print(hello())\n",
+        "\n",
+        "print()\n",
+        "\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "MmM3jAYHHLwR",
+        "outputId": "98fa4207-00e7-4f68-c009-a7d8c5c59db2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The first variable is 23\n",
+            "33\n",
+            "\n",
+            "23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#e.g of Global Variable.\n",
+        "\n",
+        "x = 23\n",
+        "print(\"The first variable of\", x)\n",
+        "def hello():\n",
+        "  global x\n",
+        "  x = 33\n",
+        "  return x\n",
+        "print(hello())\n",
+        "\n",
+        "print()\n",
+        "\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "QLVgsGjZHisc",
+        "outputId": "fd947b64-0f61-4a35-8db4-7103d6c65f59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The first variable of 23\n",
+            "33\n",
+            "\n",
+            "33\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2UuIDC6sIQSD"
       },
       "execution_count": null,
       "outputs": []
