--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDllZooAKiOHgghtD5uYh5",
+      "authorship_tag": "ABX9TyPOOGZOqjz4TSrhtXSpTuiw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1736,8 +1736,7 @@
     {
       "cell_type": "code",
       "source": [
-        "                                        #Return Statement and Recursion in python.\n",
-        ""
+        "                                        #Return Statement and Recursion in python.\n"
       ],
       "metadata": {
         "id": "glQj2IhH1mWW"
@@ -1824,7 +1823,7 @@
       "metadata": {
         "id": "BVImJM326v0e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1846,7 +1845,7 @@
         "id": "yD-yRfPlB-W9",
         "outputId": "b7be71bc-04f4-49f0-8548-084563213d02"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1872,7 +1871,7 @@
         "id": "da-W-f1tCoGI",
         "outputId": "b959c65b-7809-4f68-8646-a2d520f24560"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1902,7 +1901,7 @@
       "metadata": {
         "id": "4kv4RENNCynS"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1916,7 +1915,7 @@
       "metadata": {
         "id": "qU-ZJv3gDoZL"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1933,7 +1932,7 @@
         "id": "hYKybO4ZEuX-",
         "outputId": "72bc5959-f261-4330-d4f9-5903cefac549"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1958,7 +1957,7 @@
         "id": "vyKBg40pE6ae",
         "outputId": "d992dc01-563f-434b-e2fc-70c790573451"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1983,7 +1982,7 @@
       "metadata": {
         "id": "pIomt6YvFQox"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2008,7 +2007,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2046,7 +2045,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2062,9 +2061,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "                                                                #Problem Solving\n",
+        "#1. Write a function to find maximum of three numbers in Python.\n",
+        "\n",
+        "#2. Write a python function to create and print a list where the values are square of numbers between 1 to 30.\n",
+        "\n",
+        "#3. Write a function that takes numbers as a parameter and check whether the number is a prime number or not.\n",
+        "\n",
+        "#4. Write a python function to sum all the numbers in a list.\n",
+        "\n",
+        "#5. Write a python program to solve the fibonacci sequence using recursion."
+      ],
       "metadata": {
         "id": "2UuIDC6sIQSD"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UwLXx_bCMD9I"
       },
       "execution_count": null,
       "outputs": []
