--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOOGZOqjz4TSrhtXSpTuiw",
+      "authorship_tag": "ABX9TyOuftPut8YNC7X4WIbIrx1j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2076,14 +2076,214 @@
       "metadata": {
         "id": "2UuIDC6sIQSD"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol1\n",
+        "\n",
+        "def max_num(val1, val2, val3):\n",
+        "  if val1>val2 and val1> val3:\n",
+        "    print(\"Val1 is the greatest number.\")\n",
+        "  elif val2>val1 and val2>val3:\n",
+        "    print(\"Val2 is the greatest.\")\n",
+        "  else:\n",
+        "    print(\"val3 is the greatest.\")\n",
+        "max_num(1,2,3)"
+      ],
+      "metadata": {
+        "id": "UwLXx_bCMD9I",
+        "outputId": "287df620-5f42-4290-99e0-8cd1e1c388b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "val3 is the greatest.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol2\n",
+        "def create_list():\n",
+        "  l = []\n",
+        "  for i in range(1,31):\n",
+        "    l.append(i**2)\n",
+        "  return l\n",
+        "create_list()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "z1S79Wbg3kF4",
+        "outputId": "1ab4768b-ca17-446e-c112-7b22ce651826",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1,\n",
+              " 4,\n",
+              " 9,\n",
+              " 16,\n",
+              " 25,\n",
+              " 36,\n",
+              " 49,\n",
+              " 64,\n",
+              " 81,\n",
+              " 100,\n",
+              " 121,\n",
+              " 144,\n",
+              " 169,\n",
+              " 196,\n",
+              " 225,\n",
+              " 256,\n",
+              " 289,\n",
+              " 324,\n",
+              " 361,\n",
+              " 400,\n",
+              " 441,\n",
+              " 484,\n",
+              " 529,\n",
+              " 576,\n",
+              " 625,\n",
+              " 676,\n",
+              " 729,\n",
+              " 784,\n",
+              " 841,\n",
+              " 900]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol3\n",
+        "def check_prime(num):\n",
+        "  if num == 1:\n",
+        "    print(\"It is a prime number.\")\n",
+        "  elif num == 2:\n",
+        "    print(\"It is a prime number.\")\n",
+        "  if num > 2:\n",
+        "    for i in range(2,num):\n",
+        "      if i % num ==0:\n",
+        "        print(\"It is not a prime number.\")\n",
+        "      else:\n",
+        "        print(\"It is a prime number.\")\n",
+        "check_prime(3)"
+      ],
+      "metadata": {
+        "id": "R0uebRV55Jq1",
+        "outputId": "1c19dff8-65cd-4080-8a59-f28d8e75b196",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It is a prime number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol4- To sum all the number of the list.\n",
+        "\n",
+        "def add(numbers):\n",
+        "  total = 0\n",
+        "  for i in numbers:\n",
+        "    total = total + i\n",
+        "  return total\n",
+        "\n",
+        "add([1,2,3,])\n",
+        "\n",
+        "\n",
+        "\n",
+        "def add(x,y):\n",
+        "  total = 0\n",
+        "  for i in x,y:\n",
+        "    total = total +i\n",
+        "  return total\n",
+        "print(add(1,2))\n"
+      ],
+      "metadata": {
+        "id": "pqpPckTv544j",
+        "outputId": "67812564-841a-4919-b0cb-9a4e156b2ce0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol5- Fibonacci series using recursion.\n",
+        "def fs(num):\n",
+        "  if num == 1:\n",
+        "    return (0)\n",
+        "  elif num == 2:\n",
+        "    return (1)\n",
+        "  else:\n",
+        "    return (fs(num-1)+ fs(num-2))\n",
+        "print(fs(7))\n"
+      ],
+      "metadata": {
+        "id": "Av-J66ssBsb4",
+        "outputId": "5f7d0486-4e83-40ea-9ace-62aa41c6c47d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UwLXx_bCMD9I"
+        "id": "ZhgUPXxOFfkK"
       },
       "execution_count": null,
       "outputs": []
