--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuftPut8YNC7X4WIbIrx1j",
+      "authorship_tag": "ABX9TyMoQ2o44D3dlMoRvrgGZOUY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2100,7 +2100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2130,7 +2130,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2197,7 +2197,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2237,7 +2237,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2268,7 +2268,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,9 +2281,299 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "                                                  #Introduction to Modules.\n",
+        "#Modules are the .py files, that contains set of functions and for our convenience we have to import.\n",
+        "#After importing we can call the function whenever it needed.\n",
+        "\n",
+        "#Some of the inbuilt modules are- Datetime, Random, Math Modules etc.\n",
+        "\n",
+        "#Datetime Module- Allows to get information about the date and time.\n",
+        "import datetime\n",
+        "x = datetime.datetime.now()\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "ZhgUPXxOFfkK",
+        "outputId": "5f57342f-4590-490e-cce9-85622418b802",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2024-10-28 08:00:17.685964\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random Module- We don't need to give any specified value, instead it will pick  any random value by itself.\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "x = random.randint(1,10)\n",
+        "print(x)\n",
+        "\n",
+        "#or\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "l = ['Heads', \"Tails\"]\n",
+        "x = random.choice(l)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "hVSj_7iaIt4s",
+        "outputId": "747e32eb-8eb2-4c49-ecdb-da81da567a29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "Heads\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Math Module- Here, we can use max, min, pow, sqroot etc after importing.\n",
+        "\n",
+        "import math\n",
+        "x = max(1,2,4,5,3,5,5)\n",
+        "y = min(2,4,5,3,1,3,2,5,3)\n",
+        "\n",
+        "print(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "id": "hCYFmy3PJNZp",
+        "outputId": "c44801b5-ebe3-4bd6-c83b-f2e58f70d8a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = pow(2,3)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "uIVz7l4LKHD3",
+        "outputId": "72322172-d5bb-4ba1-d618-d4f4137c87c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = math.sqrt(49)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "BUqPiE5PKMXR",
+        "outputId": "37ed83d1-f464-47f4-ea59-26f47d3d1c0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Absolute- Will provide the highly positive values of all the value.\n",
+        "\n",
+        "c = abs(-12)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "pcQHAky1KT54",
+        "outputId": "59a92de0-29ab-4807-eb11-000a7deb1487",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Floor division-  Will give you the min value of integers or before decimal values.\n",
+        "a = 5//2\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "K82j4YtBKfy0",
+        "outputId": "f8542f89-9d1a-4991-dba0-a90be9b6f28d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ceil = Will provide the highly positive values.\n",
+        "a = math.ceil(2.1)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "Lk-U1PyXK6jn",
+        "outputId": "7617d058-2ddf-4dce-8075-5f14dd6129e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "                                              #Creation of Modules.\n",
+        "#first we are creating modules in the demo file in the format of .py files.\n",
+        "\n",
+        "#Then write all the functions.\n",
+        "\n",
+        "#Then call in the main module.  e.g\n",
+        "\n",
+        "                                            #Check the module video in the lecture.\n"
+      ],
+      "metadata": {
+        "id": "c_RGy0UlLGvj"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "                                            #NumPy\n",
+        "\n",
+        "#Basically NumPy used in the scientific and mathematical functions.\n",
+        "#NumPy stands for Numerical Python.\n",
+        "#Defines as the multidimentional array with associate fastest math calculation.\n",
+        "#Also has the function for Linear Algebra, Matrices and fourier transformations as well.\n",
+        "\n",
+        "#Benefits-\n",
+        "#It can store less memory.\n",
+        "#Can do the fastest operations.\n",
+        "\n",
+        "#Array- An array is the collection of items that are stored at contiguous memory location.\n",
+        "#Contiguous means finding the locations together.\n",
+        "\n",
+        "#It is a container which can hold the fixed number of items of the same type(Either string or integer.)\n",
+        "#A combination of array saves a lot time.\n",
+        "#The array can reduce the overall size of code."
+      ],
+      "metadata": {
+        "id": "nZpTNYR2Lxlg"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "                #Difference between an array and list.\n",
+        "\n",
+        "#A list cannot handle the directly mathematical operations, while an array can.\n",
+        "#An array contains less memory than list.\n",
+        "#Using an array is faster than list.\n",
+        "#A list contains multiple type of data while an array can't.\n",
+        "#A list can easy to modify(Add, delete, remove, update.) than array."
+      ],
+      "metadata": {
+        "id": "zWhlHfbDiLqB"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZhgUPXxOFfkK"
+        "id": "MW0zFindi_Fe"
       },
       "execution_count": null,
       "outputs": []
